# yt-channel-expert

./: .gitignore  README.md  package.json  pyproject.toml
docs/: 00_overview.md  01_repo_layout.md  02_architecture.md  03_data_model.md  04_ingestion.md  05_chunking_and_sections.md  06_embeddings_and_index.md  07_rag_answering.md  08_channel_pack_format.md  09_llm_runtimes.md  10_cli_and_ops.md  11_testing_and_eval.md  12_security_privacy_compliance.md  13_llmhub_integration.md  14_consuming_apps.md
docs/diagrams/: architecture-high-level.mmd  architecture-sequence-answering.mmd  chunking-coarse-to-fine.mmd  data-model-er.mmd  ingestion-flow.mmd  rag-prompt-assembly.mmd
examples/demo_channel/: channel.json  videos.json
examples/demo_channel/transcripts/: vid001.srt  vid002.srt
scripts/: build_demo_pack.sh  generate_mermaid.sh
services/llmhub_server/: README.md  package.json  server.js
src/yt_channel_expert/: __init__.py  config.py  errors.py  types.py
src/yt_channel_expert/cli/: main.py
src/yt_channel_expert/embeddings/: embedder.py  factory.py  hash_embedder.py  sentence_transformer_embedder.py
src/yt_channel_expert/index/: bm25.py  hybrid.py  vector_index.py
src/yt_channel_expert/ingestion/: manifest.py  transcripts.py
src/yt_channel_expert/llm/: base.py  factory.py  llama_cpp.py  llmhub_http.py  llmhub_local.py  mlx.py  mock.py
src/yt_channel_expert/pack/: pack_builder.py  pack_reader.py  schema.py
src/yt_channel_expert/processing/: chapters.py  chunking.py  normalize.py  sections.py
tests/: test_chunking.py  test_transcripts.py
(+10 files in other folders)
